--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,18 +3,18 @@ version: '1.0'
 main: com.Lino.lifesteal.Lifesteal
 api-version: '1.21'
 author: Lino
-description: Plugin Lifesteal per Minecraft
+description: Steal the player life!
 
 commands:
   lifesteal:
-    description: Comando principale di Lifesteal
+    description: Main Lifesteal command
     usage: /lifesteal help
     aliases: [ls]
 
 permissions:
   lifesteal.admin:
-    description: Permesso per amministratori
+    description: Administrator permission
     default: op
   lifesteal.reload:
-    description: Permesso per ricaricare il plugin
+    description: Permission to reload the plugin
     default: op
