--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,41 +1,58 @@
-elimination-kick: "&cYou have been eliminated! You have no more hearts."
-elimination-broadcast: "&4☠ &c%player% has been PERMANENTLY ELIMINATED!"
-elimination-admin: "&4☠ &c%player% has been ELIMINATED by an administrator!"
-death-message: "&c❤ %victim% was killed by %killer% and lost 1 heart! &7(%hearts%/%maxhearts% hearts remaining)"
-revive-broadcast: "&a✦ %player% has been revived with %hearts% hearts!"
-ban-reason: "&cEliminated - 0 hearts remaining"
-admin-kick: "&cYou have been eliminated by an administrator!"
+elimination-kick: "<gradient:#8b0000:#4b0000>You have been eliminated! You have no more hearts.</gradient>"
+elimination-broadcast: "<gradient:#ff00ff:#8b008b>☠</gradient> <gradient:#ff1493:#ff69b4>%player%</gradient> <gradient:#ff0000:#8b0000>has been PERMANENTLY ELIMINATED!</gradient>"
+elimination-admin: "<gradient:#9400d3:#4b0082>☠</gradient> <gradient:#ff1493:#ff69b4>%player%</gradient> <gradient:#9932cc:#8b008b>has been ELIMINATED by an administrator!</gradient>"
+death-message: "<gradient:#ff1493:#ff0000>❤</gradient> <gradient:#00bfff:#1e90ff>%victim%</gradient> <gradient:#ffa500:#ff4500>was killed by</gradient> <gradient:#32cd32:#228b22>%killer%</gradient> <gradient:#ff6347:#dc143c>and lost 1 heart!</gradient> <gradient:#708090:#b0c4de>(%hearts%/%maxhearts% hearts remaining)</gradient>"
+revive-broadcast: "<gradient:#00ff7f:#00fa9a>✦</gradient> <gradient:#40e0d0:#48d1cc>%player%</gradient> <gradient:#7fffd4:#20b2aa>has been revived with</gradient> <gradient:#ffd700:#ffb347>%hearts%</gradient> <gradient:#7fffd4:#20b2aa>hearts!</gradient>"
+ban-reason: "<gradient:#dc143c:#8b0000>Eliminated - 0 hearts remaining</gradient>"
+admin-kick: "<gradient:#ff4500:#b22222>You have been eliminated by an administrator!</gradient>"
 
-heart-item-name: "&c❤ Heart"
-heart-item-lore: "&7Right-click to gain 1 heart"
-heart-used: "&aYou gained 1 heart! &7(%hearts%/%maxhearts% hearts)"
-max-hearts-reached: "&cYou already have the maximum number of hearts!"
+heart-item-name: "<gradient:#ff1493:#ff69b4>❤ Heart</gradient>"
+heart-item-lore: "<gradient:#dda0dd:#ba55d3>Right-click to gain 1 heart</gradient>"
+heart-used: "<gradient:#00ff00:#32cd32>You gained 1 heart!</gradient> <gradient:#87ceeb:#4682b4>(%hearts%/%maxhearts% hearts)</gradient>"
+max-hearts-reached: "<gradient:#ff6347:#ff0000>You already have the maximum number of hearts!</gradient>"
 
-no-permission: "&cYou do not have permission to %action%!"
-player-not-found: "&cPlayer not found in the database!"
-invalid-hearts: "&cHearts must be between 0 and %max%"
-invalid-number: "&cInvalid number of hearts!"
-hearts-set: "&aHearts of %player% set to %hearts%"
-hearts-set-player: "&eYour hearts have been set to %hearts%"
-hearts-display: "&e%player% has &c%hearts% &ehearts remaining"
-eliminate-success: "&aPlayer %player% successfully eliminated!"
-revive-success: "&aPlayer %player% successfully revived!"
-reload-success: "&aPlugin successfully reloaded!"
+no-permission: "<gradient:#ff4500:#dc143c>You do not have permission to</gradient> <gradient:#ffa500:#ff8c00>%action%!</gradient>"
+player-not-found: "<gradient:#ff1493:#c71585>Player not found in the database!</gradient>"
+invalid-hearts: "<gradient:#ff6347:#cd5c5c>Hearts must be between 0 and</gradient> <gradient:#ffd700:#ffa500>%max%</gradient>"
+invalid-number: "<gradient:#dc143c:#b22222>Invalid number of hearts!</gradient>"
+hearts-set: "<gradient:#00fa9a:#00ced1>Hearts of</gradient> <gradient:#40e0d0:#20b2aa>%player%</gradient> <gradient:#00fa9a:#00ced1>set to</gradient> <gradient:#ffd700:#ffb347>%hearts%</gradient>"
+hearts-set-player: "<gradient:#daa520:#ffd700>Your hearts have been set to</gradient> <gradient:#ff69b4:#ff1493>%hearts%</gradient>"
+hearts-display: "<gradient:#87ceeb:#4169e1>%player%</gradient> <gradient:#9370db:#8a2be2>has</gradient> <gradient:#ff1493:#ff69b4>%hearts%</gradient> <gradient:#9370db:#8a2be2>hearts remaining</gradient>"
+eliminate-success: "<gradient:#32cd32:#228b22>Player</gradient> <gradient:#00bfff:#1e90ff>%player%</gradient> <gradient:#32cd32:#228b22>successfully eliminated!</gradient>"
+revive-success: "<gradient:#00ff7f:#3cb371>Player</gradient> <gradient:#40e0d0:#20b2aa>%player%</gradient> <gradient:#00ff7f:#3cb371>successfully revived!</gradient>"
+reload-success: "<gradient:#7fff00:#32cd32>Plugin successfully reloaded!</gradient>"
 
-help-title: "&6========== Lifesteal Help =========="
-help-footer: "&6=================================="
-help-cmd-help: "&e/lifesteal help &f- Display this menu"
-help-cmd-get: "&e/lifesteal get <player> &f- Show a player's hearts"
-help-cmd-set: "&e/lifesteal set <player> <hearts> &f- Set a player's hearts"
-help-cmd-eliminate: "&e/lifesteal eliminate <player> &f- Eliminate a player"
-help-cmd-revive: "&e/lifesteal revive <player> &f- Revive a player"
-help-cmd-reload: "&e/lifesteal reload &f- Reload the configuration"
+help-title: "<gradient:#ff00ff:#00ffff>========== Lifesteal Help ==========</gradient>"
+help-footer: "<gradient:#00ffff:#ff00ff>==================================</gradient>"
+help-cmd-help: "<gradient:#ffd700:#ffa500>/lifesteal help</gradient> <gradient:#e6e6fa:#d8bfd8>- Display this menu</gradient>"
+help-cmd-get: "<gradient:#00bfff:#1e90ff>/lifesteal get <player></gradient> <gradient:#e6e6fa:#d8bfd8>- Show a player's hearts</gradient>"
+help-cmd-set: "<gradient:#ff69b4:#ff1493>/lifesteal set <player> <hearts></gradient> <gradient:#e6e6fa:#d8bfd8>- Set a player's hearts</gradient>"
+help-cmd-eliminate: "<gradient:#ff4500:#dc143c>/lifesteal eliminate <player></gradient> <gradient:#e6e6fa:#d8bfd8>- Eliminate a player</gradient>"
+help-cmd-revive: "<gradient:#00fa9a:#20b2aa>/lifesteal revive <player></gradient> <gradient:#e6e6fa:#d8bfd8>- Revive a player</gradient>"
+help-cmd-reload: "<gradient:#7fff00:#32cd32>/lifesteal reload</gradient> <gradient:#e6e6fa:#d8bfd8>- Reload the configuration</gradient>"
+help-cmd-doomsday: "<gradient:#8b0000:#ff0000>/lifesteal doomsday</gradient> <gradient:#e6e6fa:#d8bfd8>- Spawn the Doomsday Sword</gradient>"
 
-usage-set: "&cUsage: /lifesteal set <player> <hearts>"
-usage-get: "&cUsage: /lifesteal get <player>"
-usage-eliminate: "&cUsage: /lifesteal eliminate <player>"
-usage-revive: "&cUsage: /lifesteal revive <player>"
+usage-set: "<gradient:#ff6347:#ff1493>Usage:</gradient> <gradient:#ffa500:#ff4500>/lifesteal set <player> <hearts></gradient>"
+usage-get: "<gradient:#ff6347:#ff1493>Usage:</gradient> <gradient:#00bfff:#4169e1>/lifesteal get <player></gradient>"
+usage-eliminate: "<gradient:#ff6347:#ff1493>Usage:</gradient> <gradient:#dc143c:#8b0000>/lifesteal eliminate <player></gradient>"
+usage-revive: "<gradient:#ff6347:#ff1493>Usage:</gradient> <gradient:#00fa9a:#20b2aa>/lifesteal revive <player></gradient>"
 
-plugin-enabled: "&aLifesteal enabled!"
-plugin-disabled: "&cLifesteal disabled!"
-plugin-reloaded: "&aLifesteal reloaded!"
+plugin-enabled: "<gradient:#00ff00:#7fff00>Lifesteal</gradient> <gradient:#40e0d0:#00fa9a>enabled!</gradient>"
+plugin-disabled: "<gradient:#ff4500:#dc143c>Lifesteal</gradient> <gradient:#ff6347:#ff0000>disabled!</gradient>"
+plugin-reloaded: "<gradient:#7fff00:#00ff00>Lifesteal</gradient> <gradient:#00fa9a:#40e0d0>reloaded!</gradient>"
+
+doomsday-sword-name: "<gradient:#8b0000:#ff0000>⚔ Blade of Eternal Damnation ⚔</gradient>"
+doomsday-sword-lore1: "<gradient:#4b0082:#8b008b>Forged in the depths of the void</gradient>"
+doomsday-sword-lore2: "<gradient:#8b008b:#9400d3>by ancient forgotten gods</gradient>"
+doomsday-sword-lore3: "<gradient:#dc143c:#ff0000>⚠ ONE HIT = INSTANT ELIMINATION ⚠</gradient>"
+doomsday-sword-lore4: "<gradient:#ff4500:#ff6347>Removes ALL hearts permanently</gradient>"
+doomsday-sword-lore5: "<gradient:#ffd700:#ff8c00>✦ Single Use - Consumes on kill ✦</gradient>"
+doomsday-sword-lore6: "<gradient:#708090:#b0c4de>The blade thirsts for souls...</gradient>"
+
+doomsday-elimination: "<gradient:#8b0000:#ff0000>⚔ DOOMSDAY EXECUTION ⚔</gradient> <gradient:#ff00ff:#ff1493>%victim%</gradient> <gradient:#4b0082:#8b008b>was obliterated by</gradient> <gradient:#00ff00:#32cd32>%killer%</gradient><gradient:#8b0000:#ff0000>'s forbidden blade!</gradient>"
+doomsday-sword-consumed: "<gradient:#8b008b:#9400d3>The Blade of Eternal Damnation has consumed its victim and vanished...</gradient>"
+doomsday-kick: "<gradient:#8b0000:#4b0000>Your soul has been claimed by the Doomsday Blade!</gradient>"
+doomsday-ban-reason: "<gradient:#8b0000:#ff0000>Eliminated by the Doomsday Blade - Soul eternally claimed</gradient>"
+doomsday-received: "<gradient:#ff0000:#8b0000>You have received the Blade of Eternal Damnation! Use it wisely...</gradient>"
+doomsday-dropped: "<gradient:#ff0000:#8b0000>The Blade of Eternal Damnation has been dropped at your feet!</gradient>"
+console-cannot-use: "<gradient:#ff0000:#ff6347>Only players can use this command!</gradient>"
